[workspace]
members = ["aoc", "2022/day1", "2022/day2", "2022/day3", "2022/day4", "2023/01", "2023/02", "2023/03", "2023/04", "2023/05", "2023/06", "2023/07", "2023/08", "2023/09", "2023/10", "2023/11", "2023/12", "2023/13"]
resolver = "2"

[profile.release]
opt-level = 3
lto = true
codegen-units = 1
panic = "abort"
debug = false
strip = true

[profile.dev]
opt-level = 1

[profile.dev.package."*"]
opt-level = 3

[profile.lldb]
inherits = "dev"
opt-level = 0
debug = true
